# cloudwatch

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cloudwatch/: cloudwatch.py
test/: message_256.txt  message_257.txt  message_513.txt  test.py
